--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Omar Alshaker
 
 # Short bio or description (displayed in the header)
-description: A mostly but not fully tech blog
+description: My mostly but not fully tech blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/face.jpg
